[dn] replaced constraint with matcher throughout (except in JMockSugar because I can't)